# lyceum

./: .gitignore  README.md  example_config.env  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.github/workflows/: mypy.yml  python-package.yml
lyceum/: db.sqlite3  manage.py
lyceum/Core/: models.py
lyceum/about/: tests.py  urls.py  views.py
lyceum/catalog/: admin.py  apps.py  converters.py  forms.py  managers.py  models.py  tests.py  urls.py  validators.py  views.py
lyceum/catalog/fixtures/: data.json
lyceum/catalog/migrations/: 0001_initial.py  0002_auto_20230219_1551.py  0003_auto_20230220_2142.py  0004_alter_item_text.py  0005_auto_20230221_1710.py  0006_auto_20230222_1423.py  0007_auto_20230222_1626.py  0008_auto_20230222_1729.py  0009_auto_20230222_1745.py  0009_auto_20230223_2139.py  0010_galleryimagesitem_mainimageitem.py  0011_alter_galleryimagesitem_options.py  0012_item_is_on_main.py  0013_auto_20230308_1011.py  0014_auto_20230308_1013.py  0015_auto_20230317_2258.py  (+6 more)
lyceum/core/: apps.py  models.py  validators.py
lyceum/download/: apps.py  urls.py  views.py
lyceum/feedback/: admin.py  forms.py  models.py  urls.py  views.py
lyceum/homepage/: apps.py  tests.py  urls.py  views.py
lyceum/lyceum/: settings.py  urls.py
lyceum/rating/: admin.py  apps.py  forms.py  managers.py  models.py
lyceum/statistic/: apps.py  tests.py  urls.py  views.py
lyceum/stats/: apps.py  tests.py  urls.py  views.py
lyceum/users/: admin.py  backends.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
(+77 files in other folders)
